Fixed VR scrolling regression when wheel scroll latching is disabled.

This cl is a follow up for the following change:
https://chromium-review.googlesource.com/c/chromium/src/+/842707

It updates the expected scroll event sequence for VR touchpad scrolling
when wheel scroll latching is disabled, I missed this case in the
original cl.

Bug: 798741, 797322
Change-Id: Ieac7fdc2dc96287848bab985894337f40275b2b5
Reviewed-on: https://chromium-review.googlesource.com/857355
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528328}
Former-commit-id: f11f9437c10af943f3770cd7bba3c0eb2b4b15c2