content/browser/renderer_host/render_widget_host_impl.cc
@@ -1183,7 +1183,22 @@ void RenderWidgetHostImpl::ForwardGestureEventWithLatencyInfo(
              blink::WebInputEvent::kGestureFlingStart) {
     if (gesture_event.source_device ==
         blink::WebGestureDevice::kWebGestureDeviceTouchpad) {
-      if (GetView()->wheel_scroll_latching_enabled()) {
+      // TODO(sahel): Remove the VR specific case when motion events are used
+      // for Android VR event processing and VR touchpad scrolling is handled by
+      // sending wheel events rather than directly injecting Gesture Scroll
+      // Events. https://crbug.com/797322
+      if (GetView()->IsInVR()) {
+        // Regardless of the state of the wheel scroll latching
+        // WebContentsEventForwarder doesn't inject any GSE events before GFS.
+        DCHECK(is_in_gesture_scroll_[gesture_event.source_device]);
+
+        // Reset the is_in_gesture_scroll since while scrolling in Android VR
+        // the first wheel event sent by the FlingController will cause a GSB
+        // generation in MouseWheelEventQueue. This is because GSU events before
+        // the GFS are directly injected to RWHI rather than being generated
+        // from wheel events in MouseWheelEventQueue.
+        is_in_gesture_scroll_[gesture_event.source_device] = false;
+      } else if (GetView()->wheel_scroll_latching_enabled()) {
         // When wheel scroll latching is enabled, no GSE is sent before GFS, so
         // is_in_gesture_scroll must be true.
         DCHECK(is_in_gesture_scroll_[gesture_event.source_device]);
@@ -1191,22 +1206,14 @@ void RenderWidgetHostImpl::ForwardGestureEventWithLatencyInfo(
         // The FlingController handles GFS with touchpad source and sends wheel
         // events to progress the fling, the wheel events will get processed by
         // the MouseWheelEventQueue and GSU events with inertial phase will be
-        // sent to the renderer.
-        if (GetView()->IsInVR()) {
-          // Reset the is_in_gesture_scroll since while scrolling in Android VR
-          // the first wheel event sent by the FlingController will cause a GSB
-          // generation in MouseWheelEventQueue. This is because
-          // WebContentsEventForwarder injects gesture scroll events to the RWHI
-          // rather than wheel events. TODO(sahel): Remove this when motion
-          // events are used for Android VR event processing.
-          // https://crbug.com/797322
-          is_in_gesture_scroll_[gesture_event.source_device] = false;
-        } else {
-          // is_in_gesture_scroll must stay true till the fling progress is
-          // finished. Then the FlingController will generate and send a GSE
-          // event to show the end of a scroll sequence.
-        }
-      } else {  // !GetView()->wheel_scroll_latching_enabled()
+        // sent to the renderer. is_in_gesture_scroll must stay true till the
+        // fling progress is finished. Then the FlingController will generate
+        // and send a wheel event with phaseEnded. MouseWheelEventQueue will
+        // process the wheel event to generate and send a GSE which shows the
+        // end of a scroll sequence.
+      } else {  // !GetView()->IsInVR() &&
+                // !GetView()->wheel_scroll_latching_enabled()
+
         // When wheel scroll latching is disabled a GSE is sent before a GFS.
         // The GSE has already finished the scroll sequence.
         DCHECK(!is_in_gesture_scroll_[gesture_event.source_device]);
